--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
 
 
-    <div class="container-fluid">
+  <div class="container-fluid">
 
             <!--NAvbar 2-->
             <div class="row" style="margin-bottom: 0px;">
@@ -100,9 +100,9 @@
 
 <div class="container-fluid" style="background-color:#bbb;" >    
   <div class="container" style="background-color:#bbb;">
-        <div class="container" >
-            <!--Carousel-->
 
+        <!--Carousel-->
+        <div class="container" >
             <div style="background-image: linear-gradient(black, grey);" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
 
@@ -127,7 +127,7 @@
                     <a href="https://anttiannala.github.io/Project/TietoaMeista.html"><div class="text-block3">
                       <h3 style="color:yellow;">Hinnasto</h3>
                       <p>Tarkista palveluidemme hinnat klikkaamalla tästä!</p>
-                    </div>
+                    </div></a>
                   </div>
 
                 </div>
@@ -193,8 +193,8 @@
 
      </div>
     </div>
-  </div>
-   </div>     
+</div>
+
   
     
     <!--Footer-->
