--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -44,17 +44,17 @@
             <form>
                <input type="checkbox" id="määräaikaishuolto" name="Määräaikaishuolto" value="Määräaikaishuolto">
                <label for="Määräaikaishuolto">Määräaikaishuolto</label>
-               <input type="checkbox" id="Renkaiden vaihto" name="Renkaiden vaihto" value="Renkaiden vaihto">
+               <input type="checkbox" id="Renkaiden_vaihto" name="Renkaiden vaihto" value="Renkaiden vaihto">
                <label for="Renkaiden vaihto">Renkaiden vaihto</label>
                <br>
                <input type="checkbox" id="Öljynvaihto" name="Öljynvaihto" value="Öljynvaihto">
                <label for="Öljynvaihto">Öljynvaihto</label>
-               <input type="checkbox" id="Jakohihnan vaihto" name="Jakohihnan vaihto" value="Jakohihnan vaihto">
+               <input type="checkbox" id="Jakohihnan_vaihto" name="Jakohihnan vaihto" value="Jakohihnan vaihto">
                <label for="Jakohihnan vaihto">Jakohihnan vaihto</label>
                <br>
               <input type="checkbox" id="Ilmastointi" name="Ilmastointi" value="Ilmastointi">
                <label for="Ilmastointi">Ilmastointi</label>
-               <input type="checkbox" id="Muu korjaus,tarkenna" name="Muu korjaus,tarkenna" value="Muu korjaus,tarkenna">
+               <input type="checkbox" id="Muu_korjaus,tarkenna" name="Muu korjaus,tarkenna" value="Muu korjaus,tarkenna">
                <label for="Muu korjaus,tarkenna">Muu korjaus, tarkenna</label><br>
                <br>
                <div class="form-floating">
@@ -90,11 +90,11 @@
              <option value="Porsche">
             </datalist> 
             <div class="form-floating">
-              <textarea class="form-control" placeholder="Auton Malli" id="Auton malli"></textarea>
+              <textarea class="form-control" placeholder="Auton_Malli" id="Auton_malli"></textarea>
               <label for="floatingTextarea">Auton malli</label>
             </div>
             <div class="form-floating">
-              <textarea class="form-control" placeholder="Auton rekisteritunnus" id="Rekisteritunnus"></textarea>
+              <textarea class="form-control" placeholder="Auton_rekisteritunnus" id="Rekisteritunnus"></textarea>
               <label for="floatingTextarea">Auton rekisteritunnus</label>
             </div>
             <br>
@@ -109,7 +109,7 @@
               <br>
 
               <div class="form-floating">
-                <textarea class="form-control" placeholder="Etu-ja sukunimi" id="Etujasukunimi"></textarea>
+                <textarea class="form-control" placeholder="Etu-ja_sukunimi" id="Etujasukunimi"></textarea>
                 <label for="floatingTextarea"> Kirjoita Etu- ja sukunimesi</label>
               </div>
               <br>
