--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -132,11 +132,11 @@
               <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
             <br>
             <h3 style="color: yellow;">Yhteystiedot</h3>
-            <addres style="color: grey;">
+            <address style="color: grey;">
               autokorjaamo@autokorjaamo.com<br>
               045 123 4567<br>
               Vankanlähde 9, 13100 Hämeenlinna<br><br><br>
-            </addres>
+            </address>
             </center>
             </div>
           </form>
