--- a/index.html
+++ b/index.html
@@ -6,72 +6,14 @@
         <meta name="description" content="AutoKorjaamo, Auto huolto, Huolto hinnasto, Aukioloajat, Uutisia">
         <title>Etusivu</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <link href="/css/css.css" rel="stylesheet" type="text/css" media="screen">
-        <style>
-    a{
-        color:grey;
-    }
-    a:hover{
-        color:yellow;
-    }
-    th {
-        color:yellow;
-        padding:5px;
-    }
-    .text-block1 {
-        position:absolute;
-        bottom: 30px;
-        right: 250px;
-        background-color: black;
-        color: white;
-        padding-left: 40px;
-        padding-right: 80px;
-        padding-top:15px;
-        padding-bottom:15px;
-        border-radius: 5px;
-    }
-    .text-block2 {
-        position:absolute;
-        bottom: 20px;
-        right: 700px;
-        background-color: black;
-        color: white;
-        padding-left: 40px;
-        padding-right: 80px;
-        padding-top:15px;
-        padding-bottom:15px;
-        border-radius: 5px;
-    }
-    .text-block3 {
-        position:absolute;
-        bottom: 40px;
-        right: 650px;
-        background-color: black;
-        color: white;
-        padding-left: 40px;
-        padding-right: 80px;
-        padding-top:15px;
-        padding-bottom:15px;
-        border-radius: 5px;
-    }
-    body{
-      background-color: #bbb;
-    }
-    div.container a{
-    color:black;
-    }
-    div.container a:hover{
-    color:yellow;
-    }
-
-        </style>
+        <link href="css/css.css" rel="stylesheet" type="text/css" media="screen">
     </head>
 <body>
 
 
   <div class="container-fluid">
 
-            <!--NAvbar 2-->
+            <!--Navbar-->
             <div class="row" style="margin-bottom: 0px;">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:black;">
               <div class="container-fluid">
@@ -96,11 +38,8 @@
             </nav>
           </div>
 
-
-
-
-<div class="container-fluid" style="background-color:#bbb;" >    
-  <div class="container" style="background-color:#bbb;">
+<div class="container-fluid" style="background-color: rgb(243, 239, 225);" >    
+  <div class="container" style="background-color: rgb(243, 239, 225);">
 
         <!--Carousel-->
         <div class="container" >
@@ -142,8 +81,9 @@
                 </a>
               </div>
          </div><br>
+
             <!--Aukioloajat-->
-              <div class="container" style="background-color: #bbb;">
+              <div class="container" style="background-color: rgb(243, 239, 225);">
                 <div class="card" style="width: 350px;font-size: large;background-color: black;">
                     <div class="card-body">
                         <h1 style="color:yellow;">Aukioloajat</h1>
@@ -205,11 +145,11 @@
       <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa palvelu</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
     <br>
     <h3 style="color: yellow;">Yhteystiedot</h3>
-    <addres style="color: grey;">
+    <address>
       autokorjaamo@autokorjaamo.com<br>
       045 123 4567<br>
       Vankanlähde 9, 13100 Hämeenlinna<br><br><br>
-    </addres>
+    </address>
     </center>
     </div>
 
