--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -77,18 +77,19 @@
    
 		
 	  <!--Footer-->
-    <div class="container-fluid" style="background-color:black;">
-      <center>
-        <h3 style="color:yellow;">Autokorjaamo.</h3><br>
-        <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a> <a href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa palvelu</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
-      <br>
+    <div class="container-fluid" style="background-color:black;text-align: center;">
+      <h3 style="color:yellow;">Autokorjaamo.</h3><br>
+      <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a>
+      <a href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a> 
+      <a href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa palvelu</a> 
+      <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
+      <br><br>
       <h3 style="color: yellow;">Yhteystiedot</h3>
       <address >
         autokorjaamo@autokorjaamo.com<br>
         045 123 4567<br>
         Vankanlähde 9, 13100 Hämeenlinna<br><br><br>
       </address>
-      </center>
       </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
