--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="AutoKorjaamo, Auto huolto, Huolto hinnasto, Aukioloajat, Uutisia">
+        <meta name="author" content="Antti Annala, Eetu Lehmusvuori, Mikael Fabritius">
         <title>Etusivu</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <link href="css/css.css" rel="stylesheet" type="text/css" media="screen">
@@ -139,8 +140,8 @@
   
     
     <!--Footer-->
-    <div class="container-fluid" style="background-color:black;">
-    <center>
+    <div class="container-fluid" style="background-color:black;text-align: center;">
+
       <h3 style="color:yellow;">Autokorjaamo.</h3><br>
       <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa palvelu</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
     <br>
@@ -150,7 +151,7 @@
       045 123 4567<br>
       Vankanlähde 9, 13100 Hämeenlinna<br><br><br>
     </address>
-    </center>
+
     </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
