--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -14,6 +14,7 @@
 <body>
  
   <!--Navbar-->
+  <div class="container-fluid">
   <div class="row" style="margin-bottom: 0px;">
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:black;">
       <div class="container-fluid">
@@ -37,7 +38,7 @@
       </div>
     </nav>
   </div>
-   
+  </div> 
  
   <!--Huge image-->
        <div class="image" >
