--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
                 <div class="row">
                   <div class="col-sm-4" style="background-color:#ccc;">
                     <a target="_blank" href="https://www.iltalehti.fi/autouutiset/a/920ff5ed-a070-483b-8ade-6eb9557aa964"><h3>Mercedes esitteli ensimmäisen pienen sähköautonsa - hinta jää alle 50 000 euron?</h3></a>
-                    <img src="images/mercedes.jpg" width="50%" height="50%" alt="https://pixabay.com/fi/photos/mercedes-190-sl-oldtimer-klassinen-3690957/">
+                    <img src="images/mercedes.jpg" style="margin: 5px;" width="190px;" height="135px;" alt="https://pixabay.com/fi/photos/mercedes-190-sl-oldtimer-klassinen-3690957/">
                   </div>
                   <div class="col-sm-4" style="background-color:#aaa;">
                     <a target="_blank" href="https://www.iltalehti.fi/autouutiset/a/63e9949e-ff5a-495d-ba16-a42adf5155d2"><h3>Tällaisen auton suomalainen haluaa: Hinta alle 20000 euroa - Mersu ja Volvo suosituimmat!</h3></a>
-                    <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
+                    <img src="images/auto.jpg" style="margin: 5px;" width="190px;" height="135px;" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
                   <div class="col-sm-4" style="background-color:#ccc;">
                     <a target="_blank" href="https://www.iltalehti.fi/autouutiset/a/9ab5cfcd-f26d-4c18-b25d-5db56bd3a538"><h3>Tältä näyttää täysin uusi Lada Niva: Ensimmäinen kuva paljastaa hurjan muutoksen</h3></a>
-                    <img src="images/lada.jpg" width="50%" height="50%" alt="https://pixabay.com/fi/photos/auto-jeeppi-ajoneuvon-seikkailu-4260033/">
+                    <img src="images/lada.jpg" style="margin: 5px;" width="190px;" height="135px;" alt="https://pixabay.com/fi/photos/auto-jeeppi-ajoneuvon-seikkailu-4260033/">
                   </div>
                   </div>
               </div>
@@ -120,15 +120,15 @@
                 <div class="row">
                   <div class="col-sm-4" style="background-color:#aaa;">
                     <a target="_blank" href="https://www.iltalehti.fi/autouutiset/a/d51f6f9f-0f53-4676-a0f3-d031233b1c88"><h3>Jopa karjan lannasta polttoainetta – Öljyn korvaajaksi ehdolla myös levä</h3></a>
-                    <img src="images/karja.jpg" width="50%" height="50%" alt="https://pixabay.com/fi/photos/lehm%C3%A4-lehm%C3%A4t-karja-niitty-el%C3%A4inten-4354411/">
+                    <img src="images/karja.jpg" style="margin: 5px;" width="190px;" height="135px;" alt="https://pixabay.com/fi/photos/lehm%C3%A4-lehm%C3%A4t-karja-niitty-el%C3%A4inten-4354411/">
                   </div>
                   <div class="col-sm-4" style="background-color:#ccc;">
                     <a target="_blank" href="https://www.iltalehti.fi/autouutiset/a/201802272200774834"><h3>Punainen vai musta ensin? Näin kytket käynnistyskaapelit oikein akkuun</h3></a>
-                    <img src="images/akku.png" width="50%" height="50%" alt="https://pixabay.com/fi/vectors/auton-akku-akku-johtaa-akulla-296788/">
+                    <img src="images/akku.png" style="margin: 5px;" width="190px;" height="135px;" alt="https://pixabay.com/fi/vectors/auton-akku-akku-johtaa-akulla-296788/">
                   </div>
                   <div class="col-sm-4" style="background-color:#aaa;">
                     <a target="_blank" href="https://www.iltalehti.fi/autouutiset/a/bfb0ec20-09ca-4164-81e0-2520295800df"><h3>Romutuspalkkion porsaanreikä tukitaan – palkkio vain yhdestä autosta</h3></a>
-                    <img src="images/romu.jpg" width="50%" height="50%" alt="https://pixabay.com/fi/photos/auton-romu-sammal-vanha-mets%C3%A4-571448/">
+                    <img src="images/romu.jpg" style="margin: 5px;" width="190px;" height="135px;" alt="https://pixabay.com/fi/photos/auton-romu-sammal-vanha-mets%C3%A4-571448/">
                   </div>
                 </div>
               </div>
@@ -140,7 +140,7 @@
   
     
     <!--Footer-->
-    <div class="container-fluid" style="background-color:black;text-align: center;">
+    <div class="container-fluid" style="background-color:black;text-align: center;height:auto;">
 
       <h3 style="color:yellow;">Autokorjaamo.</h3><br>
       <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa palvelu</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
