--- a/Hinnasto.html
+++ b/Hinnasto.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="AutoKorjaamo, Auto huolto, Huolto hinnasto">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
     <title>Hinnasto</title>
     <meta name="author" content="Antti Annala, Eetu Lehmusvuori, Mikael Fabritius">
     <style>
