--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             <!--Aukioloajat-->
               <div class="container" style="background-color: rgb(243, 239, 225);">
-                <div class="card" style="width: 350px;font-size: large;background-color: black;">
+                <div class="card" style="max-width: 300px; min-width: 150px; font-size: large;background-color: black;">
                     <div class="card-body">
                         <h1 style="color:yellow;">Aukioloajat</h1>
                       <table>
