--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     </head>
 <body>
 
-
   <div class="container-fluid">
-
             <!--Navbar-->
             <div class="row" style="margin-bottom: 0px;">
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:black;">
@@ -45,30 +43,43 @@
         <!--Carousel-->
         <div class="container" >
             <div style="background-image: linear-gradient(black, grey);" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              
                 <div class="carousel-inner">
 
                   <div class="carousel-item active">
                     <img src="images/teetarjous.jpg" style="height: 400px;" class="d-block w-100" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
-                      <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html"><div class="text-block1">
-                        <h3 style="color:yellow;">Varaa aika</h3>
+                      <a href="https://anttiannala.github.io/Project/Varaapalvelu.html">
+                        <div class="carousel-caption">
+                        <div class="text-block1">
+                          <h4 style="color:yellow;">Varaa aika</h4>
                         <p>Varaa sinulle sopiva aika klikkaamalla tästä!</p>
-                      </div></a>
+                      </div>
+                      </div>
+                    </a>
                   </div>
 
                   <div class="carousel-item">
-                    <img src="images/car.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://pixabay.com/fi/photos/auto-mekaanikko-mekaanikko-ty%C3%B6paja-2834414/">
-                    <a href="https://anttiannala.github.io/Project/TietoaMeista.html"><div class="text-block2">
-                      <h3 style="color:yellow;">Autokorjaamo.</h3>
+                    <img src="images/car.jpg" style="height: 400px;" class="d-block w-100" alt="https://pixabay.com/fi/photos/auto-mekaanikko-mekaanikko-ty%C3%B6paja-2834414/">
+                    <a href="https://anttiannala.github.io/Project/TietoaMeista.html">
+                      <div class="carousel-caption">
+                      <div class="text-block2">
+                      <h4 style="color:yellow;">Autokorjaamo.</h4>
                       <p>Lue lisää yrityksestämme tältä sivulta.</p>
-                    </div></a>
+                    </div>
+                  </div>
+                  </a>
                   </div>
 
                   <div class="carousel-item">
-                    <img src="images/rengas.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://pixy.org/5881422/">
-                    <a href="https://anttiannala.github.io/Project/TietoaMeista.html"><div class="text-block3">
-                      <h3 style="color:yellow;">Hinnasto</h3>
+                    <img src="images/rengas.jpg" style="height: 400px;" class="d-block w-100" alt="https://pixy.org/5881422/">
+                    <a href="https://anttiannala.github.io/Project/TietoaMeista.html">
+                      <div class="carousel-caption">
+                      <div class="text-block3">
+                      <h4 style="color:yellow;">Hinnasto</h4>
                       <p>Tarkista palveluidemme hinnat klikkaamalla tästä!</p>
-                    </div></a>
+                      </div>
+                    </div>
+                  </a>
                   </div>
 
                 </div>
