--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -61,13 +61,13 @@
                <br>
                <div class="form-floating">
                 <textarea class="form-control" placeholder="Ongelman tarkennus" id="Tarkennus"></textarea>
-                <label for="floatingTextarea">Auton ongelman Tarkennus</label>
+                <label for="Tarkennus">Auton ongelman Tarkennus</label>
               </div>
               <br>
               <br>
               <h3><strong>Mikä päivä sinulle sopisi?</strong></h3>
               <form action="/action_page.php">
-                <label for="päivämäärä">Valitse sopiva päivämäärä</label>
+                <label for="huolto">Valitse sopiva päivämäärä</label>
                 <input type="date" id="huolto" name="päivämäärä">
               </form>
               
@@ -75,7 +75,7 @@
           </center>
           <!--Datalist-->
           <h5><strong>Auton tiedot</strong></h5>
-          <label for="exampleDataList" class="form-label">Auton tiedot</label>
+          <label for="automerkkejä" class="form-label">Auton tiedot</label>
             <input class="form-control" list="datalistOptions" id="automerkkejä" placeholder="Valitse merkki">
             <datalist id="datalistOptions">
              <option value="BMW">
@@ -94,11 +94,11 @@
             </datalist> 
             <div class="form-floating">
               <textarea class="form-control" placeholder="Auton_Malli" id="Auton_malli"></textarea>
-              <label for="floatingTextarea">Auton malli</label>
+              <label for="Auton_malli">Auton malli</label>
             </div>
             <div class="form-floating">
               <textarea class="form-control" placeholder="Auton_rekisteritunnus" id="Rekisteritunnus"></textarea>
-              <label for="floatingTextarea">Auton rekisteritunnus</label>
+              <label for="Rekisteritunnus">Auton rekisteritunnus</label>
             </div>
             <br>
             <h5><strong>Auton mittarilukema</strong></h5>
@@ -107,19 +107,19 @@
             <h5>Kirjoita Tiedot</h5>
             <div class="form-floating">
               <input type="email" class="form-control" id="sähköposti" placeholder="name@example.com" value="test@example.com">
-             <label for="floatingInputValue">Kirjoita sähköposti osoitteesi</label>
+             <label for="sähköposti">Kirjoita sähköposti osoitteesi</label>
             </div>
               <br>
 
               <div class="form-floating">
                 <textarea class="form-control" placeholder="Etu-ja_sukunimi" id="Etujasukunimi"></textarea>
-                <label for="floatingTextarea"> Kirjoita Etu- ja sukunimesi</label>
+                <label for="Etujasukunimi"> Kirjoita Etu- ja sukunimesi</label>
               </div>
               <br>
 
               <div class="form-floating">
                 <textarea class="form-control" placeholder="Puhelinnumero" id="Puhelinnumero"></textarea>
-                <label for="floatingTextarea">Puhelinnumero</label>
+                <label for="Puhelinnumero">Puhelinnumero</label>
               </div>
 
             <div class="d-grid gap-2">
