--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -44,20 +44,20 @@
             <!--Checkbox-->
            <h2><strong>Minkälaista huoltoa tarvitset?</strong></h2>
             <form>
-               <input type="checkbox" id="määräaikaishuolto" name="Määräaikaishuolto" value="Määräaikaishuolto">
+               <input type="checkbox" id="Määräaikaishuolto" name="Määräaikaishuolto" value="Määräaikaishuolto">
                <label for="Määräaikaishuolto">Määräaikaishuolto</label>
                <input type="checkbox" id="Renkaiden_vaihto" name="Renkaiden vaihto" value="Renkaiden vaihto">
-               <label for="Renkaiden vaihto">Renkaiden vaihto</label>
+               <label for="Renkaiden_vaihto">Renkaiden vaihto</label>
                <br>
                <input type="checkbox" id="Öljynvaihto" name="Öljynvaihto" value="Öljynvaihto">
                <label for="Öljynvaihto">Öljynvaihto</label>
                <input type="checkbox" id="Jakohihnan_vaihto" name="Jakohihnan vaihto" value="Jakohihnan vaihto">
-               <label for="Jakohihnan vaihto">Jakohihnan vaihto</label>
+               <label for="Jakohihnan_vaihto">Jakohihnan vaihto</label>
                <br>
               <input type="checkbox" id="Ilmastointi" name="Ilmastointi" value="Ilmastointi">
                <label for="Ilmastointi">Ilmastointi</label>
                <input type="checkbox" id="Muu_korjaus,tarkenna" name="Muu korjaus,tarkenna" value="Muu korjaus,tarkenna">
-               <label for="Muu korjaus,tarkenna">Muu korjaus, tarkenna</label><br>
+               <label for="Muu_korjaus,tarkenna">Muu korjaus, tarkenna</label><br>
                <br>
                <div class="form-floating">
                 <textarea class="form-control" placeholder="Ongelman tarkennus" id="Tarkennus"></textarea>
@@ -122,7 +122,7 @@
                 <label for="Puhelinnumero">Puhelinnumero</label>
               </div>
               <br>
-              
+
             <div class="d-grid gap-2">
               <button class="btn btn-primary" type="button" style="background-color: yellow; color: #000; font-weight: bolder;">Varaa Huoltoaika</button>
             </div>
