--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -71,7 +71,7 @@
                 <input type="date" id="huolto" name="päivämäärä">
               </form>
               
-           </form> 
+    
           </center>
           <!--Datalist-->
           <h5><strong>Auton tiedot</strong></h5>
@@ -92,6 +92,7 @@
              <option value="Toyota">
              <option value="Porsche">
             </datalist> 
+            <!--Floating forms-->
             <div class="form-floating">
               <textarea class="form-control" placeholder="Auton_Malli" id="Auton_malli"></textarea>
               <label for="Auton_malli">Auton malli</label>
