--- a/Hinnasto.html
+++ b/Hinnasto.html
@@ -36,6 +36,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="http://shell.hamk.fi/~mikael21000/Projekti/testi.php">Vieraskirja</a>
+              </li>  
               </ul>
             </div>
           </div>
@@ -128,7 +131,8 @@
             <div class="container-fluid" style="background-color:black;">
                 <center>
                   <h3 style="color:yellow;">Autokorjaamo.</h3><br>
-                  <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="Hinnasto.html">Hinnasto</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa palvelu</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
+                  <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="Hinnasto.html">Hinnasto</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa palvelu</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
+                  <a href="http://shell.hamk.fi/~mikael21000/Projekti/testi.php">Vieraskirja</a><br>
                 <br>
                 <h3 style="color: yellow;">Yhteystiedot</h3>
                 <address style="color: grey;">
