--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -32,7 +32,11 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
-            </li>    
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link" href="http://shell.hamk.fi/~mikael21000/Projekti/testi.php">Vieraskirja</a>
+          </li>    
+ 
           </ul>
         </div>
       </div>
@@ -83,6 +87,7 @@
       <a href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a> 
       <a href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa palvelu</a> 
       <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
+      <a href="http://shell.hamk.fi/~mikael21000/Projekti/testi.php">Vieraskirja</a>
       <br><br>
       <h3 style="color: yellow;">Yhteystiedot</h3>
       <address >
