--- a/Hinnasto.html
+++ b/Hinnasto.html
@@ -135,11 +135,12 @@
                   <a href="http://shell.hamk.fi/~mikael21000/Projekti/testi.php">Vieraskirja</a><br>
                 <br>
                 <h3 style="color: yellow;">Yhteystiedot</h3>
-                <address style="color: grey;">
+                <address>
                   autokorjaamo@autokorjaamo.com<br>
                   045 123 4567<br>
-                  Vankanlähde 9, 13100 Hämeenlinna<br><br><br>
+                  Vankanlähde 9, 13100 Hämeenlinna<br><br>
                 </address>
+                <a href="http://shell.hamk.fi/~mikael21000/Projekti/kirjaudu.php">Ylläpito</a><br><br>
                 </center>
                 </div>
   
