--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -147,8 +147,9 @@
       <address>
         autokorjaamo@autokorjaamo.com<br>
         045 123 4567<br>
-        Vankanlähde 9, 13100 Hämeenlinna<br><br><br>
+        Vankanlähde 9, 13100 Hämeenlinna<br><br>
       </address>
+      <a href="http://shell.hamk.fi/~mikael21000/Projekti/kirjaudu.php">Ylläpito</a><br><br>
      
       </div>
              
