--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -90,11 +90,12 @@
       <a href="http://shell.hamk.fi/~mikael21000/Projekti/testi.php">Vieraskirja</a>
       <br><br>
       <h3 style="color: yellow;">Yhteystiedot</h3>
-      <address >
+      <address>
         autokorjaamo@autokorjaamo.com<br>
         045 123 4567<br>
-        Vankanlähde 9, 13100 Hämeenlinna<br><br><br>
+        Vankanlähde 9, 13100 Hämeenlinna<br><br>
       </address>
+      <a href="http://shell.hamk.fi/~mikael21000/Projekti/kirjaudu.php">Ylläpito</a><br><br>
       </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
